--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <style>
       body {
-        margin: 0; 
-        overflow: hidden; 
+        margin: 0;
+        overflow: hidden;
         background: #222;
       }
       .arjs-loader {
@@ -39,7 +39,7 @@
       arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;">
       <a-marker preset="hiro">
         <a-entity
-          gltf-model="logo.glb"
+          gltf-model="modelos/logo.glb"
           scale="0.1 0.1 0.1"
           position="0 0 0"
         ></a-entity>
