--- a/index.html
+++ b/index.html
@@ -6,13 +6,36 @@
     <title>AR.js Mobile GLB Exemplo</title>
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <style>
+      /* Botão de tela cheia estilo mobile */
+      #fullscreenBtn {
+        position: fixed; bottom: 20px; right: 20px;
+        padding: 10px 18px; border-radius: 8px;
+        background: #222; color: #fff; border: none; font-size: 18px;
+        opacity: 0.8; z-index: 100;
+      }
+      #fpsStats {
+        position: fixed; top: 8px; left: 8px; z-index: 99;
+      }
+    </style>
   </head>
-  <body style="margin: 0; overflow: hidden;">
-    <a-scene embedded arjs>
+  <body style="margin:0; overflow:hidden; background:#000;">
+    <a-scene embedded arjs stats>
       <a-marker preset="hiro">
         <a-entity gltf-model="logo.glb" position="0 0 0" scale="0.05 0.05 0.05"></a-entity>
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
+    <button id="fullscreenBtn" onclick="launchFullscreen()">Tela cheia</button>
+    <script>
+      // Função para colocar o scene em tela cheia
+      function launchFullscreen() {
+        var el = document.querySelector('a-scene');
+        if (el.requestFullscreen) el.requestFullscreen();
+        else if (el.webkitRequestFullscreen) el.webkitRequestFullscreen();
+        else if (el.mozRequestFullScreen) el.mozRequestFullScreen();
+        else if (el.msRequestFullscreen) el.msRequestFullscreen();
+      }
+    </script>
   </body>
 </html>
