--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>AR.js Mobile GLB com Marcador Personalizado</title>
+    <title>AR IFRJ GESTÂO TI</title>
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <style>
@@ -18,7 +18,7 @@
   <body style="margin:0; overflow:hidden; background:#000;">
     <a-scene embedded arjs stats>
       <a-marker type="pattern" url="arc.patt">
-        <a-entity gltf-model="logo.glb" position="0 0 0" scale="0.05 0.05 0.05"></a-entity>
+        <a-entity gltf-model="logo.glb" position="0 0 0" scale="0.08 0.08 0.08"></a-entity>
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
