--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </style>
   </head>
   <body style="margin:0; overflow:hidden; background:#000;">
-    <a-scene embedded arjs stats>
+    <a-scene embedded arjs='sourceType: webcam;' stats>
       <!-- Marcador original -->
       <a-marker type="pattern" url="arc.patt">
         <a-entity gltf-model="logo.glb" position="0 0 0" scale="0.08 0.08 0.08"></a-entity>
@@ -26,15 +26,29 @@
       <a-marker type="pattern" url="wev.patt">
         <a-entity gltf-model="modelwev.glb" position="0 0 0" scale="0.08 0.08 0.08"></a-entity>
       </a-marker>
-      
-      <a-entity camera></a-entity>
+
+      <!-- Modelo usando GPS -->
+      <a-entity
+        gps-entity-place="latitude: -22.8930606; longitude: -43.0532290;"
+        gltf-model="swing.glb"
+        scale="0.1 0.1 0.1">
+      </a-entity>
+
+      <a-camera gps-camera rotation-reader></a-camera>
     </a-scene>
+    
     <button id="fullscreenBtn" onclick="launchFullscreen()">Tela cheia</button>
     <script>
       function launchFullscreen() {
         var el = document.querySelector('a-scene');
         if (el.requestFullscreen) el.requestFullscreen();
         else if (el.webkitRequestFullscreen) el.webkitRequestFullscreen();
+        else if (el.mozRequestFullScreen) el.mozRequestFullScreen();
+        else if (el.msRequestFullscreen) el.msRequestFullscreen();
+      }
+    </script>
+  </body>
+</html>        else if (el.webkitRequestFullscreen) el.webkitRequestFullscreen();
         else if (el.mozRequestFullScreen) el.mozRequestFullScreen();
         else if (el.msRequestFullscreen) el.msRequestFullscreen();
       }
