--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
         scale="0.1 0.1 0.1">
       </a-entity>
 
+      <a-entity
+  gps-entity-place="latitude: -22.8935940; longitude: -43.0532800;"
+  geometry="primitive: box"
+  material="color: red"
+  scale="1 1 1">
+</a-entity>
+
       <a-camera gps-camera rotation-reader></a-camera>
     </a-scene>
     
