--- a/index.html
+++ b/index.html
@@ -27,23 +27,23 @@
         <a-entity gltf-model="modelwev.glb" position="0 0 0" scale="0.08 0.08 0.08"></a-entity>
       </a-marker>
 
-      <!-- Modelo usando GPS com offset de ~10cm ao norte -->
+      <!-- Modelo glb por GPS ~10cm ao norte -->
       <a-entity
         gps-entity-place="latitude: -22.8935930; longitude: -43.0532800;"
         gltf-model="logo.glb"
         scale="0.1 0.1 0.1">
       </a-entity>
-
+      
+      <!-- Cubo vermelho por GPS exato -->
       <a-entity
-  gps-entity-place="latitude: -22.8935940; longitude: -43.0532800;"
-  geometry="primitive: box"
-  material="color: red"
-  scale="1 1 1">
-</a-entity>
+        gps-entity-place="latitude: -22.8935940; longitude: -43.0532800;"
+        geometry="primitive: box"
+        material="color: red"
+        scale="1 1 1">
+      </a-entity>
 
       <a-camera gps-camera rotation-reader></a-camera>
     </a-scene>
-    
     <button id="fullscreenBtn" onclick="launchFullscreen()">Tela cheia</button>
     <script>
       function launchFullscreen() {
