--- a/index.html
+++ b/index.html
@@ -1,43 +1,99 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>AR IFRJ GESTÂO TI</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=no"
+    />
+    <title>AR IFRJ GESTÃO TI - Câmera Principal</title>
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <style>
       #fullscreenBtn {
-        position: fixed; bottom: 20px; right: 20px;
-        padding: 10px 18px; border-radius: 8px;
-        background: #222; color: #fff; border: none; font-size: 18px;
-        opacity: 0.8; z-index: 100;
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        padding: 10px 18px;
+        border-radius: 8px;
+        background: #222;
+        color: #fff;
+        border: none;
+        font-size: 18px;
+        opacity: 0.8;
+        z-index: 100;
       }
     </style>
   </head>
-  <body style="margin:0; overflow:hidden; background:#000;">
-    <a-scene embedded arjs stats>
+  <body style="margin: 0; overflow: hidden; background: #000;">
+    <button id="fullscreenBtn" onclick="launchFullscreen()">Tela cheia</button>
+
+    <a-scene embedded stats vr-mode-ui="enabled: false" id="arScene">
       <!-- Marcador original -->
-      <a-marker type="pattern" url="arc.patt">
-        <a-entity gltf-model="logo.glb" position="0 0 0" scale="0.08 0.08 0.08"></a-entity>
+      <a-marker
+        type="pattern"
+        url="arc.patt"
+      >
+        <a-entity
+          gltf-model="logo.glb"
+          position="0 0 0"
+          scale="0.08 0.08 0.08"
+        ></a-entity>
       </a-marker>
-      
+
       <!-- Novo marcador para wev.patt -->
-      <a-marker type="pattern" url="wev.patt">
-        <a-entity gltf-model="modelwev.glb" position="0 0 0" scale="0.08 0.08 0.08"></a-entity>
+      <a-marker
+        type="pattern"
+        url="wev.patt"
+      >
+        <a-entity
+          gltf-model="modelwev.glb"
+          position="0 0 0"
+          scale="0.08 0.08 0.08"
+        ></a-entity>
       </a-marker>
-      
+
       <a-entity camera></a-entity>
     </a-scene>
-    <button id="fullscreenBtn" onclick="launchFullscreen()">Tela cheia</button>
+
     <script>
+      // Função para executar fullscreen no canvas AR
       function launchFullscreen() {
-        var el = document.querySelector('a-scene');
+        const el = document.querySelector("a-scene");
         if (el.requestFullscreen) el.requestFullscreen();
         else if (el.webkitRequestFullscreen) el.webkitRequestFullscreen();
         else if (el.mozRequestFullScreen) el.mozRequestFullScreen();
         else if (el.msRequestFullscreen) el.msRequestFullscreen();
       }
+
+      // Função para inicializar AR.js com a câmera principal
+      async function initARWithMainCamera() {
+        const devices = await navigator.mediaDevices.enumerateDevices();
+        const videoDevices = devices.filter(
+          (device) => device.kind === "videoinput"
+        );
+
+        // Assumindo que a última câmera da lista é a traseira (câmera principal)
+        const mainCamera = videoDevices[videoDevices.length - 1];
+
+        // Configure o arjs para usar o deviceId da câmera principal
+        const sceneEl = document.querySelector("#arScene");
+        sceneEl.setAttribute("arjs", {
+          sourceType: "webcam",
+          sourceId: mainCamera.deviceId,
+        });
+
+        console.log("Câmera principal selecionada:", mainCamera.label);
+      }
+
+      // Ao carregar a página, inicialize com a câmera principal
+      window.addEventListener("load", () => {
+        if (!navigator.mediaDevices || !navigator.mediaDevices.enumerateDevices) {
+          alert("Seu navegador não suporta seleções de dispositivos de vídeo.");
+          return;
+        }
+        initARWithMainCamera();
+      });
     </script>
   </body>
 </html>
