--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, user-scalable=no"
     />
-    <title>AR IFRJ GESTÃO TI - Zoom e Troca Câmera Mobile</title>
+    <title>AR IFRJ GESTÃO TI - Zoom e Troca Câmera Funcional</title>
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <style>
@@ -73,17 +73,33 @@
       disabled
     />
 
-    <a-scene embedded stats vr-mode-ui="enabled: false" id="arScene">
-      <a-marker type="pattern" url="arc.patt">
-        <a-entity gltf-model="logo.glb" position="0 0 0" scale="0.08 0.08 0.08"></a-entity>
-      </a-marker>
+    <div id="sceneContainer">
+      <a-scene
+        embedded
+        stats
+        vr-mode-ui="enabled: false"
+        id="arScene"
+        arjs="sourceType: webcam"
+      >
+        <a-marker type="pattern" url="arc.patt">
+          <a-entity
+            gltf-model="logo.glb"
+            position="0 0 0"
+            scale="0.08 0.08 0.08"
+          ></a-entity>
+        </a-marker>
 
-      <a-marker type="pattern" url="wev.patt">
-        <a-entity gltf-model="modelwev.glb" position="0 0 0" scale="0.08 0.08 0.08"></a-entity>
-      </a-marker>
+        <a-marker type="pattern" url="wev.patt">
+          <a-entity
+            gltf-model="modelwev.glb"
+            position="0 0 0"
+            scale="0.08 0.08 0.08"
+          ></a-entity>
+        </a-marker>
 
-      <a-entity camera></a-entity>
-    </a-scene>
+        <a-entity camera></a-entity>
+      </a-scene>
+    </div>
 
     <script>
       let videoDevices = [];
@@ -92,6 +108,7 @@
 
       const switcherBtn = document.getElementById("cameraSwitcher");
       const zoomSlider = document.getElementById("zoomSlider");
+      const sceneContainer = document.getElementById("sceneContainer");
 
       function launchFullscreen() {
         const el = document.querySelector("a-scene");
@@ -101,20 +118,43 @@
         else if (el.msRequestFullscreen) el.msRequestFullscreen();
       }
 
-      async function startARWithDevice(deviceId, zoomValue = 1) {
+      // Função que reinicia a cena AR.js trocando a câmera
+      async function switchCamera(deviceId, zoomValue = 1) {
         if (stream) {
           stream.getTracks().forEach((track) => track.stop());
         }
 
-        try {
-          const constraints = {
-            video: { deviceId: { exact: deviceId } },
-            audio: false,
-          };
+        // Remove cena AR antiga
+        const oldScene = document.querySelector("#arScene");
+        if (oldScene) {
+          oldScene.remove();
+        }
 
+        // Cria nova cena AR com nova câmera
+        const newScene = document.createElement("a-scene");
+        newScene.setAttribute("id", "arScene");
+        newScene.setAttribute("embedded", "");
+        newScene.setAttribute("stats", "");
+        newScene.setAttribute("vr-mode-ui", "enabled: false");
+        newScene.setAttribute("arjs", `sourceType: webcam; sourceId: ${deviceId}`);
+
+        newScene.innerHTML = `
+          <a-marker type="pattern" url="arc.patt">
+            <a-entity gltf-model="logo.glb" position="0 0 0" scale="0.08 0.08 0.08"></a-entity>
+          </a-marker>
+          <a-marker type="pattern" url="wev.patt">
+            <a-entity gltf-model="modelwev.glb" position="0 0 0" scale="0.08 0.08 0.08"></a-entity>
+          </a-marker>
+          <a-entity camera></a-entity>
+        `;
+
+        sceneContainer.appendChild(newScene);
+
+        // Obtenha stream para aplicar zoom, se suportado
+        try {
+          const constraints = { video: { deviceId: { exact: deviceId } }, audio: false };
           stream = await navigator.mediaDevices.getUserMedia(constraints);
 
-          // Aplica zoom se suportado
           const [videoTrack] = stream.getVideoTracks();
           const capabilities = videoTrack.getCapabilities();
           if (capabilities.zoom) {
@@ -124,17 +164,8 @@
                 : { zoom: capabilities.min };
             await videoTrack.applyConstraints(zoomConstraint);
           }
-
-          // Atualiza atributo do arjs para trocar a câmera
-          const sceneEl = document.querySelector("#arScene");
-          sceneEl.setAttribute("arjs", {
-            sourceType: "webcam",
-            sourceId: deviceId,
-          });
-
-          console.log(`Câmera ativada: ${deviceId} com zoom ${zoomValue}`);
         } catch (e) {
-          console.error("Erro ao iniciar câmera:", e);
+          console.error("Erro ao aplicar zoom na câmera:", e);
         }
       }
 
@@ -150,13 +181,13 @@
         switcherBtn.disabled = false;
         zoomSlider.disabled = false;
 
-        // Começa com a câmera principal (geralmente a traseira - última da lista)
+        // Começar com a câmera principal (última da lista)
         currentDeviceIndex = videoDevices.length - 1;
-        await startARWithDevice(videoDevices[currentDeviceIndex].deviceId);
+        await switchCamera(videoDevices[currentDeviceIndex].deviceId);
 
         switcherBtn.onclick = async () => {
           currentDeviceIndex = (currentDeviceIndex + 1) % videoDevices.length;
-          await startARWithDevice(
+          await switchCamera(
             videoDevices[currentDeviceIndex].deviceId,
             parseFloat(zoomSlider.value)
           );
@@ -164,7 +195,7 @@
 
         zoomSlider.oninput = async (e) => {
           const zoomValue = parseFloat(e.target.value);
-          await startARWithDevice(videoDevices[currentDeviceIndex].deviceId, zoomValue);
+          await switchCamera(videoDevices[currentDeviceIndex].deviceId, zoomValue);
         };
       }
 
